# BetonQuest

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  3.1  CHANGELOG.md  CNAME  CONTRIBUTING.md  DEV  LICENSE  README.md  SECURITY.md  build_numbers.json  circle.yml  config.yml  crowdin.yml  discord.sh  events.yml  index.html  jenkins.pom.xml  lombok.config  mcinfo.yml  mkdocs.insiders.yml  mkdocs.yml  pom.xml  qodana.yaml  requirements.txt  versions.json
docs/: 01-Home.md  02-Installation-and-Configuration.md  03-Commands-and-permissions.md  04-Quick-start-tutorial.md  05-Reference.md  06-Conditions-List.md  07-Events-List.md  08-Objectives-List.md  09-Variables-List.md  10-Compatibility.md  12-Frequently-Asked-Questions.md  13-Info-for-developers.md  14-Contributing.md  Commands-and-permissions.md  Compatibility.md  Conditions-List.md  Events-List.md  Features.md  For-Admins.md  Frequently-Asked-Questions.md  Home.md  Info-for-developers.md  Installation-and-Configuration.md  Notifications.md  Objectives-List.md  Reference.md  Tips-and-tricks.md  Variables-List.md  index.md  mkdocs_parent.yml  pyproject.toml  setup-docs-dependencies.py
docs/API/: API.md  BukkitConfigurations.md  ConfigPatcher.md  Configuration-Files.md  ConfigurationFile.md  ConfigurationFiles.md  Events.md  Getting-Started.md  Instruction.md  Legacy-API.md  Logging.md  Obtaining-API.md  Overview.md  Profiles.md  Registry.md  RemovedMethods.md  Schdeules.md  Schedules.md  TextParsing.md  Writing-Implementations.md
docs/Contributing/: Contributing.md  Docs.md
(+9372 files in other folders)
